# acjgitbis

./: README.md  mytest.py  skin.py
data/: skin.xml
data/skin_default/: Makefile.am
data/skin_default/buttons/: Makefile.am
data/skin_default/icons/: Makefile.am
data/skin_default/menu/: Makefile.am
lib/python/Components/: AVSwitch.py  About.py  Harddisk.py  InputDevice.py  Lcd.py  SystemInfo.py  opkg.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py
lib/python/Plugins/SystemPlugins/Videomode/: VideoWizard.py
lib/python/Screens/: About.py  Ci.py  NetworkSetup.py  PluginBrowser.py  SoftwareUpdate.py  Standby.py  StartWizard.py  Wizard.py
lib/python/Tools/: HardwareInfo.py  Profile.py
