installdir = $(pkgdatadir)/skin_default/menu

dist_install_DATA = \
	dvd_player.png \
	information.png \
	media_player.png \
	plugins.png \
	scart.png \
	setup.png \
	shutdown.png \
	subtitles.png \
	timer.png \	
	db.png \
	select300_45.png \
	select300_45black.png \
	select340_45.png \
	select400_45.png \
	select430_45.png \
	select600_50.png \
        select750_38.png \
	select780_22.png \
	select780_23.png \
	select780_30.png \
	select780_75.png \
	select800_50.png \
	select1080_25.png \
	select1080_30.png \
        select1080_60.png \
	select1080_70.png \
	select1080_100.png \
	select1080_100_bg.png \
	select1080_110.png \
	select1100_30.png 
        
